Use common st7796 for ESP32S3_ZX3D50CE02S_USRC_4832
Remove debug log

--- a/hardware/drivers_video_i80/st7796/CMakeLists.txt
+++ b/hardware/drivers_video_i80/st7796/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "st7796.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log lvgl esp_lcd driver
+    REQUIRES esp3d_log esp_lcd driver
 )
