--- a/hardware/ESP32S3_8048S043C/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_8048S043C/components/bsp/CMakeLists.txt
@@ -2,5 +2,5 @@
 idf_component_register(
     SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES esp3d_log lvgl esp_lcd i2c_bus gt911 disp_backlight
+    REQUIRES esp3d_log lvgl esp_lcd i2c_bus st7262 gt911 disp_backlight
 )
