--- a/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp/CMakeLists.txt
@@ -2,5 +2,5 @@
 idf_component_register(
     SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES esp3d_log lvgl i2c_bus gt911 st7796 usb_serial disp_backlight
+    REQUIRES esp3d_log lvgl i2c_bus gt911 st7796 usb_serial disp_backlight camera
 )
