--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -47,6 +47,7 @@ if(WIFI_SERVICE)
         endif()
         if(CAMERA_SERVICE)
             list(APPEND SOURCES "modules/camera")
+            list(APPEND SOURCES "modules/http/handlers/camera")
         endif()
         list(APPEND SOURCES "modules/websocket")
         set(WEBEMBEDDEDFILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
