Some files reorg to make more consistent and easier to read
More update of project-arch.md

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -29,6 +29,8 @@ if(WIFI_SERVICE)
     if(WEB_SERVICES)
         list(APPEND SOURCES "modules/http")
         list(APPEND SOURCES "modules/http/handlers")
+        list(APPEND SOURCES "modules/http/handlers/authentication")
+        list(APPEND SOURCES "modules/http/handlers/flash")
         if(SSDP_SERVICE)
             list(APPEND SOURCES "modules/http/handlers/ssdp")
         endif()
