--- a/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp/CMakeLists.txt
@@ -2,6 +2,6 @@
 idf_component_register(
     SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES esp3d_log lvgl i2c_bus spi_bus gt911 st7796 disp_backlight camera
+    REQUIRES esp3d_log lvgl i2c_bus usb_serial spi_bus gt911 st7796 disp_backlight camera
 )
 #usb_serial 
