--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -2,59 +2,74 @@ name: build-ci
 
 on: [pull_request, push]
 
+env:
+  BUILD_ERROR: 0
+
 jobs:
-  checkout:
+  esp-idf:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Get IDF Setup Hash
+        id: idf-setup-hash
+        run: echo "hash=$(md5sum ./.github/ci/idf-setup.sh | awk '{ print $1 }')" >> $GITHUB_OUTPUT
+      - name: Cache ESP-IDF
+        id: cache-esp-idf
+        uses: actions/cache@v3
         with:
-          submodules: 'recursive'
-      - name: esp-idf setup
+          path: esp-idf
+          key: ${{ runner.os }}-esp-idf-${{ steps.idf-setup-hash.outputs.hash }}
+      - name: Run IDF Setup
+        if: steps.cache-esp-idf.outputs.cache-hit != 'true'
         run: bash ./.github/ci/idf-setup.sh
+      - name: Create ESP-IDF Archive
+        run: zip -r esp-idf.zip esp-idf
       - uses: actions/upload-artifact@v3
         with:
           name: esp-idf
-          path: esp-idf
-      - uses: actions/upload-artifact@v3  
-        with:
-          name: project
-          path: .
+          path: esp-idf.zip
 
   build:
     runs-on: ubuntu-latest
-    needs: checkout
+    needs: esp-idf
     strategy:
       matrix:
         platform: [ESP32S3_FREENOVE, ESP32S3_HMI43V3, ZX3D50CE02S-SRC-4832, ESP32S3_8048S070C]
     steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
       - uses: actions/download-artifact@v3
         with:
           name: esp-idf
-          path: esp-idf
-      - uses: actions/download-artifact@v3
-        with:
-          name: project
-          path: .  
-      - name: build ${{ matrix.platform }}
-        run: bash ./.github/ci/${{ matrix.platform }}.sh
+      - name: Unzip ESP-IDF
+        run: unzip esp-idf.zip
+      - name: Build ${{ matrix.platform }}
+        run: |
+          source esp-idf/export.sh
+          idf.py fullclean
+          bash ./.github/ci/${{ matrix.platform }}.sh
         continue-on-error: true
-      - name: mark ${{ matrix.platform }} error
+      - name: Mark ${{ matrix.platform }} error
         if: failure()
         run: echo "BUILD_ERROR=1" >> $GITHUB_ENV
-        
+      - uses: actions/upload-artifact@v3
+        if: success()
+        with:
+          name: ${{ matrix.platform }}_artifact
+          path: build/
+
   finalize:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     needs: build
     if: always()
     steps:
       - name: Final check
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        run: |  
+        run: |
           if [ "${{ env.BUILD_ERROR }}" -ne "0" ]; then
             bash ./.github/ci/final-check.sh "$GITHUB_RUN_ID" "failure"
-          else  
+          else
             bash ./.github/ci/final-check.sh "$GITHUB_RUN_ID" "success"
           fi
-
-
