--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -57,17 +57,13 @@ jobs:
       - name: Mark ${{ matrix.platform }} error
         if: failure()
         run: echo "BUILD_ERROR=1" >> $GITHUB_ENV
-      - uses: actions/upload-artifact@v3
-        if: success()
-        with:
-          name: ${{ matrix.platform }}_artifact
-          path: build/
 
   finalize:
     runs-on: ubuntu-latest
     needs: build
     if: always()
     steps:
+      - uses: actions/checkout@v3
       - name: Final check
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
