Modify ESP32S3-BZM-TFT35_GT911 to SPI screen (#64)
* Modify ESP32S3-BZM-TFT35_GT911 to SPI screen

---------

Signed-off-by: Luc <8822552+luc-github@users.noreply.github.com>
Co-authored-by: Luc <8822552+luc-github@users.noreply.github.com>

--- a/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp/CMakeLists.txt
+++ b/hardware/ESP32S3_BZM_TFT35_GT911/components/bsp/CMakeLists.txt
@@ -2,5 +2,6 @@
 idf_component_register(
     SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES esp3d_log lvgl i2c_bus gt911 st7796 usb_serial disp_backlight camera
+    REQUIRES esp3d_log lvgl i2c_bus usb_serial spi_bus gt911 st7796 disp_backlight camera
 )
+#usb_serial 
