--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -79,6 +79,7 @@ endif()
  if(TFT_UI_SERVICE)
     list(APPEND SOURCES "display")
     list(APPEND SOURCES "display/components")
+    list(APPEND SOURCES "display/screens")
     list(APPEND SOURCES "modules/rendering")
     if(TARGET_FW_MARLIN)
        list(APPEND SOURCES "display/3dprinter/marlin")
