Code base for grbl
Remove any reference to 3D printer elements
Rename bed to workspace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,10 +39,10 @@ OPTION(HARDWARE_MOD_EXT_PSRAM "Hardware Mod: External PSRAM" OFF)
 # #######################################
 # Select one targeted firmware
 # #######################################
-OPTION(TARGET_FW_MARLIN "Marlin firmware" ON)
+OPTION(TARGET_FW_MARLIN "Marlin firmware" OFF)
 OPTION(TARGET_FW_REPETIER "Repetier firmware" OFF)
 OPTION(TARGET_FW_SMOOTHIEWARE "Smoothieware firmware" OFF)
-OPTION(TARGET_FW_GRBL "GRBL firmware" OFF)
+OPTION(TARGET_FW_GRBL "GRBL firmware" ON)
 
 
 # #######################################
