FIx wrong single quote setting

--- a/embedded/.prettierrc
+++ b/embedded/.prettierrc
@@ -3,8 +3,7 @@
   "tabWidth": 4,
   "useTabs": false,
   "semi": true,
-  "singleQuote": true,
-  "jsxSingleQuote": false,
+  "singleQuote": false,
   "trailingComma": "es5",
   "bracketSpacing": true,
   "bracketSameLine": false,
