--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -94,62 +94,18 @@ endif()
        list(APPEND SOURCES "display/cnc/grbl")
        list(APPEND SOURCES "display/cnc/grbl/screens")
     endif()
-    if(ESP32S3_8048S070C OR ESP32S3_8048S050C OR ESP32S3_8048S043C OR ESP32S3_HMI43V3)
-        if(TARGET_FW_MARLIN)
-           list(APPEND SOURCES "display/3dprinter/marlin/res_800_480")
-           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_800_480")
-        elseif(TARGET_FW_REPETIER)
-           list(APPEND SOURCES "display/3dprinter/repetier/res_800_480")
-           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_800_480")
-        elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smoothieware/res_800_480")
-           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_800_480")
-        elseif(TARGET_FW_GRBL)
-           list(APPEND SOURCES "display/cnc/grbl/res_800_480")
-           set(INCLUDES_DISPLAY "display/cnc/grbl/res_800_480")
-        endif()
-    elseif(ESP32_ROTRICS_DEXARM35 OR ESP32S3_ZX3D50CE02S_USRC_4832 OR ESP32S3_BZM_TFT35_GT911 OR ESP32_3248S035C OR ESP32_3248S035R)
-        if(TARGET_FW_MARLIN)
-           list(APPEND SOURCES "display/3dprinter/marlin/res_480_320")
-           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_320")
-        elseif(TARGET_FW_REPETIER)
-           list(APPEND SOURCES "display/3dprinter/repetier/res_480_320")
-           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_320")
-        elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_320")
-           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_320")  
-        elseif(TARGET_FW_GRBL)
-           list(APPEND SOURCES "display/cnc/grbl/res_480_320")
-           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_320")
-        endif()
-    elseif(ESP32S3_4827S043C)
-        if(TARGET_FW_MARLIN)
-           list(APPEND SOURCES "display/3dprinter/marlin/res_480_272")
-           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_480_272")
-        elseif(TARGET_FW_REPETIER)
-           list(APPEND SOURCES "display/3dprinter/repetier/res_480_272")
-           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_480_272")
-        elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smoothieware/res_480_272")
-           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_480_272")  
-        elseif(TARGET_FW_GRBL)
-           list(APPEND SOURCES "display/cnc/grbl/res_480_272")
-           set(INCLUDES_DISPLAY "display/cnc/grbl/res_480_272")
-        endif()
-    elseif(ESP32_2432S028R)
-        if(TARGET_FW_MARLIN)
-           list(APPEND SOURCES "display/3dprinter/marlin/res_320_240")
-           set(INCLUDES_DISPLAY "display/3dprinter/marlin/res_320_240")
-        elseif(TARGET_FW_REPETIER)
-           list(APPEND SOURCES "display/3dprinter/repetier/res_320_240")
-           set(INCLUDES_DISPLAY "display/3dprinter/repetier/res_320_240")
-        elseif(TARGET_FW_SMOOTHIEWARE)
-           list(APPEND SOURCES "display/3dprinter/smoothieware/res_320_240")
-           set(INCLUDES_DISPLAY "display/3dprinter/smoothieware/res_320_240")
-        elseif(TARGET_FW_GRBL)
-           list(APPEND SOURCES "display/cnc/grbl/res_320_240")
-           set(INCLUDES_DISPLAY "display/cnc/grbl/res_320_240")
-        endif()
+    if(TARGET_FW_MARLIN)
+        list(APPEND SOURCES "display/3dprinter/marlin/${RESOLUTION_SCREEN}")
+        set(INCLUDES_DISPLAY "display/3dprinter/marlin/${RESOLUTION_SCREEN}")
+    elseif(TARGET_FW_REPETIER)
+        list(APPEND SOURCES "display/3dprinter/repetier//${RESOLUTION_SCREEN")
+        set(INCLUDES_DISPLAY "display/3dprinter/repetier//${RESOLUTION_SCREEN")
+    elseif(TARGET_FW_SMOOTHIEWARE)
+        list(APPEND SOURCES "display/3dprinter/smoothieware//${RESOLUTION_SCREEN")
+        set(INCLUDES_DISPLAY "display/3dprinter/smoothieware//${RESOLUTION_SCREEN")
+    elseif(TARGET_FW_GRBL)
+        list(APPEND SOURCES "display/cnc/grbl//${RESOLUTION_SCREEN")
+        set(INCLUDES_DISPLAY "display/cnc/grbl//${RESOLUTION_SCREEN")
     endif()
 endif()
 
