Add Waveshare 7 TFT Support
* Extract hardware target from common make to define resolution
* Fix compilation failed if disable Time
* Fix compilation issue if nothing is enabled but SD and WiFi
* Fix warning  if nothing is enabled but SD and WiFi
* Update esp3d_version.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@
 OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-SRC-4832 3.5inches" OFF)
 OPTION(ESP32S3_BZM_TFT35_GT911 "TFT TARGET is ESP32S3 Panlee BZM 3.5inches" OFF)
+OPTION (ESP32S3_8048_TOUCH_LCD_7 "TFT TARGET is ESP32S3 - 7.0in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_8048S070C "TFT TARGET is ESP32S3_8048S070C - 7.0in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_8048S050C "TFT TARGET is ESP32S3_8048S050C - 5.0in. 800x480 (Capacitive)" OFF)
 OPTION(ESP32S3_8048S043C "TFT TARGET is ESP32S3_8048S043C - 4.3in. 800x480 (Capacitive)" OFF)
@@ -64,7 +65,7 @@ OPTION(TFT_UI_SERVICE "TFT UI service" ON)
 OPTION(SD_CARD_SERVICE "SD card service" ON)
 OPTION(NOTIFICATIONS_SERVICE "Notifications service" ON)
 OPTION(UPDATE_SERVICE "Update service" ON)
-OPTION(USB_SERIAL_SERVICE "Use USB Serial if Available" ON)
+OPTION(USB_SERIAL_SERVICE "Use USB Serial if Available" OFF)
 OPTION(USE_FAT_INSTEAD_OF_LITTLEFS "Use FAT instead of LittleFS" OFF)
 
 # ===========================================
@@ -87,6 +88,7 @@ set(PLATFORMS_LIST
   ESP32S3_SEEED_STUDIO_XIAO
   ESP32S3_CUSTOM
   ESP32_CUSTOM
+  ESP32S3_8048_TOUCH_LCD_7
 )
 
 set(FIRMWARES_LIST
